Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -21,3 +21,8 @@ h1 {
 .spacer {
     margin-top: 10px;
 }
+
+label {
+    width: 150px;
+    margin-right: 15px;
+}
